static/css/styles.css
:root {
    --primary-light-4: rgb(242, 253, 255);
    --primary-light-3: rgb(212, 251, 255);
    --primary-light-2: rgb(173, 243, 255);
    --primary-light-1: rgb(122, 235, 255);
    --primary-color: rgb(13, 219, 255);
    --primary-dark-1: rgb(11, 184, 214);
    --primary-dark-2: rgb(8, 142, 166);
    --primary-dark-3: rgb(5, 94, 110);
    --primary-dark-4: rgb(3, 50, 59);

    --accent-light-4: rgb(255, 243, 229);
    --accent-light-3: rgb(255, 220, 184);
    --accent-light-2: rgb(255, 193, 128);
    --accent-light-1: rgb(255, 169, 77);
    --accent-color: rgb(255, 147, 28);
    --accent-dark-1: rgb(224, 116, 0);
    --accent-dark-2: rgb(179, 92, 0);
    --accent-dark-3: rgb(107, 55, 0);
    --accent-dark-4: rgb(51, 26, 0);

    --success-light-4: rgb(214, 255, 226);
    --success-light-3: rgb(189, 255, 209);
    --success-light-2: rgb(143, 255, 176);
    --success-light-1: rgb(92, 255, 141);
    --success-green: rgb(55, 255, 115);
    --success-dark-1: rgb(10, 255, 84);
    --success-dark-2: rgb(0, 209, 63);
    --success-dark-3: rgb(0, 77, 23);
    --success-dark-4: rgb(0, 51, 15);

    --error-light-4: rgb(255, 199, 208);
    --error-light-3: rgb(255, 158, 174);
    --error-light-2: rgb(255, 102, 128);
    --error-light-1: rgb(255, 56, 89);
    --error-red: rgb(255, 13, 53);
    --error-dark-1: rgb(219, 0, 37);
    --error-dark-2: rgb(163, 0, 27);
    --error-dark-3: rgb(107, 0, 18);
    --error-dark-4: rgb(46, 0, 8);

    --warning-light-4: rgb(255, 255, 212);
    --warning-light-3: rgb(255, 255, 179);
    --warning-light-2: rgb(255, 255, 135);
    --warning-light-1: rgb(245, 245, 108);
    --warning-yellow: rgb(240, 240, 10);
    --warning-dark-1: rgb(204, 204, 8);
    --warning-dark-2: rgb(179, 179, 7);
    --warning-dark-3: rgb(128, 128, 5);
    --warning-dark-4: rgb(77, 77, 3);

    --monospace-font: 'JetBrains Mono', monospace;
    --decorative-font: 'JetBrains Mono', cursive;
    --paragraph-font: 'Quicksand', Arial, sans-serif;
    --heading-bold-font: 'Tilt Warp', Helvetica, sans-serif;

    --background-light-3: rgb(91, 91, 91);
    --background-light-2: rgb(72, 72, 72);
    --background-light-1: rgb(67, 67, 67);
    --background: rgb(42, 42, 42);
    --background-dark-1: rgb(25, 25, 25);
    --background-dark-2: rgb(11, 11, 11);
    --background-dark-3: rgb(0, 0, 0);

    --default-font-color: #ececec;
    --muted-font: rgb(186, 186, 186);
}

*, *::before, *::after {
    box-sizing: border-box;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-track {
    background-color: var(--background);
}

::-webkit-scrollbar-thumb {
    background-color: var(--background-dark-2);
}

::selection {
    background-color: var(--primary-color);
    color: black;
}

.donutSpinner {
    display: inline-block;
    border-radius: 50%;
    border: 2px solid white;
    border-left-color: var(--primary-dark-1);
    animation: donut-spin 1.2s linear infinite;
    transition: border-left-color ease 0.25s;
}

.icon-tabler {
    stroke-width: 1;
}

.error-container .donutSpinner {
    border-left-color: var(--error-dark-1);
}

.success-container .donutSpinner {
    border-left-color: var(--success-dark-1);
}

.warning-container .donutSpinner {
    border-left-color: var(--warning-yellow);
}

.smallSpinner, .mediumSpinner, .largeSpinner {
    width: 0;
    height: 0;
}

.donutSpinner.smallSpinner {
    width: 20px;
    height: 20px;
}

.donutSpinner.mediumSpinner {
    width: 30px;
    height: 30px;
}

.donutSpinner.largeSpinner {
    width: 50px;
    height: 50px;
}


.message-error {
    background-color: var(--error-light-4);
    border-bottom: 1px solid var(--error-dark-1);
    color: var(--error-dark-4);
}

.message-warning {
    background-color: var(--warning-light-4);
    border-bottom: 1px solid var(--warning-dark-1);
    color: var(--warning-dark-4);
}

.message-success {
    background-color: var(--success-light-4);
    border-bottom: 1px solid var(--success-dark-1);
    color: var(--success-dark-4);
}

.cursor-pointer {
    cursor: pointer;
}

@keyframes donut-spin {
    to {
        transform: rotate(1turn);
    }
}

html, body {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

body {
    background-color: var(--background);
    color: var(--default-font-color);
    font-family: var(--paragraph-font);
}

a {
    color: var(--default-font-color);
    text-decoration: none;
    border-bottom: 1px solid var(--primary-color);
}

h1 {
    font-size: 3rem;
    font-family: var(--heading-bold-font);
}

@media (max-width: 900px) {
    h1 {
        font-size: 2.5rem;
    }
}

@media (max-width: 600px) {
    h1 {
        font-size: 2rem;
    }
}

/*
    Input styles
*/

input, button {
    padding: 10px;
    background-color: var(--background-dark-1);
    font-family: var(--monospace-font);
    box-shadow: none;
    border: none;
    color: var(--default-font-color);
    margin-top: 10px;
    transition: background-color ease 0.2s;
    border-radius: 4px;
}

input:hover,
button:hover {
    background-color: var(--background-dark-2);
}

input:active,
button:active {
    background-color: var(--background-dark-3);
}

input:focus,
button:focus {
    outline: white solid 1px;
}

/*
    Layout styles
*/

.hidden {
    display: none !important;
}

.flexbox-row {
    display: flex;
    flex-flow: row wrap;
}

.flexbox-column {
    display: flex;
    flex-flow: column wrap;
}

.column-full {
    width: 100%;
}

.column-half {
    width: 50%;
}

.column-third {
    width: 33.3333%;
}

.column-twothird {
    width: 66.6666%;
}

.column-4of5 {
    width: 80%;
}

.column-fourth {
    width: 25%;
}

@media (max-width: 900px) {
    .column-half,
    .column-full,
    .column-third,
    .column-twothird,
    .column-4of5,
    .column-fourth {
        width: 100%;
    }
}

.ajc {
    align-items: center;
    justify-content: center;
}

.aic {
    align-items: center;
}

.jcc {
    justify-content: center;
}

.jcsb {
    justify-content: space-between;
}

.jcse {
    justify-content: space-evenly;
}

.aibl {
    align-items: baseline;
}

.aifs {
    align-items: flex-start;
}

.aife {
    align-items: flex-end;
}

.jcfs {
    justify-content: flex-start;
}

.jcfe {
    justify-content: flex-end;
}

.align-right {
    text-align: right;
}

.center {
    margin: 0 auto;
}

.pad-5 {
    padding: 5px;
}

.pad-10 {
    padding: 10px;
}

.pad-20 {
    padding: 20px;
}

.pad-30 {
    padding: 30px;
}

.pad-40 {
    padding: 40px;
}

.pad-50 {
    padding: 50px;
}

.no-pad-50 {
    padding: 50px;
}

@media (max-width: 900px) {
    .no-pad-50 {
        padding: 10px;
    }
}

.mar-5 {
    margin: 5px;
}

.mar-10 {
    margin: 10px;
}

.mar-20 {
    margin: 20px;
}

.mar-30 {
    margin: 30px;
}

.mar-40 {
    margin: 40px;
}

.mar-50 {
    margin: 50px;
}

.space-lr {
    margin-left: 5px;
    margin-right: 5px;
}

.no-margin {
    margin: 0;
}

.mt-5 {
    margin-top: 5px;
}

.mbt-10 {
    margin-top: 10px;
    margin-bottom: 10px;
}

.mt-10 {
    margin-top: 10px;
}

.mt-20 {
    margin-top: 20px;
}

.mt-30 {
    margin-top: 30px;
}

.mt-50 {
    margin-top: 50px
}

.mb-5 {
    margin-bottom: 5px;
}

.mb-10 {
    margin-bottom: 10px;
}

.mb-20 {
    margin-bottom: 20px;
}

.mb-30 {
    margin-bottom: 30px;
}

.mb-50 {
    margin-bottom: 50px
}

.pl-10 {
    padding-left: 10px;
}

.pl-30 {
    padding-left: 30px;
}

.pr-10 {
    padding-right: 10px;
}

.height-80 {
    min-height: 80vh;
}

.full-height {
    height: 99.5vh;
}

.mobile-element {
    display: none;
}

.mobile-hide {
    display: inherit;
}

@media (max-width: 600px) {
    .mobile-hide {
        display: none;
    }

    .mobile-element {
        display: inherit;
    }
}


/*
    Grid styles
*/

.chainrxn-row {
    width: 100%;
    flex-direction: row;
    flex-wrap: nowrap;
}

.chainrxn-cell {
    border: 2px solid red;
    flex-grow: 1;
}

.player-row {
    font-size: 1.5rem;
    font-family: var(--monospace-font);
}

.player-color {
    width: 50px;
    height: 30px;
    margin-left: 30px;
}

#game-window {
    border-width: 2px;
    border-style: solid;
    border-color: transparent;

}

.chainrxn-particle-empty,
.chainrxn-particle-1,
.chainrxn-particle-2,
.chainrxn-particle-3 {
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: var(--monospace-font);
    color: black;
    text-shadow: 0 0 2px white;
    width: 100%;
    height: 100%;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(359deg);
    }
}

.chainrxn-particle-2 {
    animation: rotate 3s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    z-index: 3;
}

.chainrxn-particle-3 {
    animation: rotate 1.5s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    z-index: 3;
}

.chainrxn-particle-4,
.chainrxn-particle-5,
.chainrxn-particle-6 {
    animation: rotate 0.7s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    z-index: 3;
}

.popup-window {
    border-radius: 15px;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.2rem;
    outline: 10000px solid rgba(0, 0, 0, 0.3);
    z-index: 5;
    background-color: var(--background-dark-2);
    max-width: 700px;
    max-height: 80vh;
    overflow-y: auto;
}

#game-over {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.2);
    z-index: 1;
}

#winner-heading {
    margin-right: 10px;
    text-shadow: 0 0 2px black;
    padding: 5px;
}

.cta-or {
    font-family: var(--monospace-font);
    color: var(--muted-font);
    font-size: 0.9rem;
}

